added seller photo and made some more updates

--- a/Sass/Sass-Partials/_blog.scss
+++ b/Sass/Sass-Partials/_blog.scss
@@ -15,7 +15,7 @@
         height: 210px;
         overflow: hidden;
         img {
-          filter: grayscale(1);
+          // filter: grayscale(1);
           transform: scale(1);
           height: inherit;
           background-size: cover;
