--- a/Sass/Sass-Partials/_portfolio.scss
+++ b/Sass/Sass-Partials/_portfolio.scss
@@ -38,7 +38,7 @@
           overflow: hidden;
           .card-image-case {
             background-size: cover;
-            filter: grayscale(1);
+            // filter: grayscale(1);
             min-height: 300px;
             overflow: hidden;
             transform: scale(1);
