--- a/Sass/Sass-Partials/_home.scss
+++ b/Sass/Sass-Partials/_home.scss
@@ -18,6 +18,7 @@
         border-radius: 100%;
         background-size: cover;
         filter: grayscale(1);
+        background-position: 120% 50%;
       }
     }
     #particlesCase {
