--- a/Sass/Sass-Partials/_testimonials.scss
+++ b/Sass/Sass-Partials/_testimonials.scss
@@ -27,7 +27,7 @@
         height: 120px;
         border-radius: 100%;
         background-size: cover;
-        filter: grayscale(1);
+        // filter: grayscale(1);
       }
     }
     .client-quote {
